--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 </div>
               </nav>
 
+              
+
               <div class="container">
                     <div class="row">
                       <div class="col-md-8">
@@ -42,7 +44,7 @@
                         </div>
                         <div class="row">
                           <div class="col-md-3">
-                            <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/67564068_10211745781918588_7223765560260034560_n.jpg?_nc_cat=109&_nc_oc=AQkrPdcvlDVQNrbTh1923LnyPVxrrZT45dXSLoK3dPeLba0pb5a063kyeH5IPNsivKto54QSC1TfsABg7lCBuPJG&_nc_ht=scontent-sea1-1.xx&oh=c812c9596df03af42b0c70cee1d27c91&oe=5DEC01F9" style="width:150px;height:175px;">
+                            <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/67564068_10211745781918588_7223765560260034560_n.jpg?_nc_cat=109&_nc_oc=AQkrPdcvlDVQNrbTh1923LnyPVxrrZT45dXSLoK3dPeLba0pb5a063kyeH5IPNsivKto54QSC1TfsABg7lCBuPJG&_nc_ht=scontent-sea1-1.xx&oh=c812c9596df03af42b0c70cee1d27c91&oe=5DEC01F9" class="img-fluid" alt="Responsive image">
                           </div>
                           <div class="col-md-9">
                             <p>
